@@ -1,7 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //  
 //  Copyright (c) 2011, John Haddon. All rights reserved.
-//  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2011-2012, Image Engine Design Inc. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -195,24 +195,12 @@ struct Slot : public SlotBase<Signal::slot_function_type::arity, Signal, Caller>
 };
 
 template<typename Signal, typename SlotCaller>
-PyObject *Connection::create( Signal &s, boost::python::object &slot )
+Connection *Connection::create( Signal &s, boost::python::object &slot )
 {
 	Connection *connection = new Connection;
-	
-	typedef boost::python::manage_new_object::apply<Connection *>::type ResultConverter;
-	connection->m_pyObject = ResultConverter()( connection );
-
-	// now we need to stuff the slot into the dictionary for the
-	// new python object. it has to go in there so it can be seen
-	// by the garbage collector (the garbage collector can't see
-	// inside the c++ Connection instance). this is an annoying
-	// complication, and the only reason we have this weird create()
-	// function instead of just having a normal constructor.
-	boost::python::object connectionObj( boost::python::handle<>( boost::python::borrowed( connection->m_pyObject ) ) );
-	boost::python::dict d = boost::python::extract<boost::python::dict>( connectionObj.attr( "__dict__" ) );
-	d["slot"] = slot;
+	connection->m_slot = slot;	
 	connection->m_connection = s.connect( Slot<Signal, SlotCaller>( connection ) );
-	return connection->m_pyObject;
+	return connection;
 }
 
 }; // namespace GafferBindings
