@@ -1,76 +1,0 @@
-##########################################################################
-#  
-#  Copyright (c) 2011, John Haddon. All rights reserved.
-#  
-#  Redistribution and use in source and binary forms, with or without
-#  modification, are permitted provided that the following conditions are
-#  met:
-#  
-#      * Redistributions of source code must retain the above
-#        copyright notice, this list of conditions and the following
-#        disclaimer.
-#  
-#      * Redistributions in binary form must reproduce the above
-#        copyright notice, this list of conditions and the following
-#        disclaimer in the documentation and/or other materials provided with
-#        the distribution.
-#  
-#      * Neither the name of John Haddon nor the names of
-#        any other contributors to this software may be used to endorse or
-#        promote products derived from this software without specific prior
-#        written permission.
-#  
-#  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
-#  IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
-#  THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
-#  PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR
-#  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
-#  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
-#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
-#  PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
-#  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
-#  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-#  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-#  
-##########################################################################
-
-import weakref
-import gc
-import unittest
-
-import IECore
-
-class GCTest( unittest.TestCase ) :
-
-	def test( self ) :
-	
-		"""Test that the garbage collection fix is present in Boost.Python."""
-
-		BoostPythonClass = IECore.V3f
-
-		# make a cyclic reference
-		# between instances of a bound class
-		o1 = BoostPythonClass()
-		o2 = BoostPythonClass()
-		o1.r = o2
-		o2.r = o1
-
-		# make weak references to track
-		# their lifetime
-		w1 = weakref.ref( o1 )
-		w2 = weakref.ref( o2 )
-
-		# delete the instances and
-		# run the garbage collector
-		del o1
-		del o2
-		while gc.collect() :
-			pass
-
-		# check that the objects have been collected
-		self.assert_( w1() is None )
-		self.assert_( w2() is None )
-
-if __name__ == "__main__":
-	unittest.main()
-	
