@@ -1,5 +1,7 @@
 * OpDialogue now supports op.userData()["UI"]["buttonLabel"], for specifying a custom label for the OK button.
 
+* Removed requirement of the boost build having a patched python library capable of participating in garbage collection.
+
 0.34.0
 ------
 
